# ROS2_Multi_Vehicle_Simulation

./: .gitignore  README.md
box_bot_description/launch/: multi_spawn_robot_launch.py
usv_controller/: CMakeLists.txt  package.xml
usv_controller/include/subscriptions/: odometry.hpp
usv_controller/launch/: controller.py
usv_controller/src/: usv_01_controller.cpp  usv_02_controller.cpp  usv_03_controller.cpp  usv_04_controller.cpp  usv_05_controller.cpp  usv_06_controller.cpp
